# data-fin

./: AUTHORS  CHANGELOG  LICENSE  README  README.md  TODO  VERSION  data-fin.cabal
.github/workflows/: ci.yml
src/Data/Number/: CalkinWilf.hs  Fin.hs
src/Data/Number/Fin/: Int16.hs  Int32.hs  Int64.hs  Int8.hs  Integer.hs  Small.hs  TyBinary.hs  TyDecimal.hs  TyDecimal_test.hs  TyInteger.hs  TyOrdering.hs
src/Data/Reflection/: OfType.hs
src/Prelude/: SafeEnum.hs
