----------------------------------------------------------------
-- wren gayle romano <wren@cpan.org>                ~ 2021.10.17
----------------------------------------------------------------

-- Cabal >=1.10 is required by Hackage.
Cabal-Version:  >= 1.10
Build-Type:     Simple

Name:           data-fin
Version:        0.1.99999
Stability:      experimental
Homepage:       https://wrengr.org/software/hackage.html
Bug-Reports:    https://github.com/wrengr/data-fin/issues
Author:         wren gayle romano
Maintainer:     wren@cpan.org
Copyright:      Copyright (c) 2012–2021 wren gayle romano
License:        BSD3
License-File:   LICENSE

Category:       Data
Synopsis:
    Finite totally ordered sets
Description:
    Finite totally ordered sets

Extra-source-files:
    AUTHORS, README, CHANGELOG

-- This should work as far back as GHC 6.12.1, but we don't verify that by CI.
-- <https://github.com/wrengr/data-fin/actions?query=workflow%3Aci>
Tested-With:
    GHC ==8.0.2,
    GHC ==8.2.2,
    GHC ==8.4.4,
    GHC ==8.6.5,
    GHC ==8.8.4,
    GHC ==8.10.3,
    GHC ==9.0.1

Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/data-fin.git

----------------------------------------------------------------
Flag base4
    Default:     True
    Description: base-4.0 emits "Prelude deprecated" messages in
                 order to get people to be explicit about which
                 version of base they use.
Flag splitBase
    Default:     True
    Description: base-3.0 (GHC 6.8) broke out the packages: array,
                 bytestring, containers, directory, old-locale,
                 old-time, packedstring, pretty, process, random.
----------------------------------------------------------------
Library
    Default-Language:  Haskell2010
    Hs-Source-Dirs:    src
    Exposed-Modules:   Data.Number.Fin
                     , Data.Number.Fin.Integer
                     , Data.Number.Fin.Int8
                     , Data.Number.Fin.Int16
                     , Data.Number.Fin.Int32
                     , Data.Number.Fin.Int64
                     -- Data.Number.Fin.Word8
                     -- Data.Number.Fin.Word16
                     -- Data.Number.Fin.Word32
                     -- Data.Number.Fin.Word64
                     -- Data.Number.Fin.TyInteger
                     -- Data.Number.Fin.TyBinary
                     , Data.Number.Fin.TyDecimal
                     -- TODO: OfType should be moved elsewhere if we don't use it...
                     -- Data.Reflection.OfType
    Other-Modules:     Data.Number.Fin.TyOrdering

    -- TODO: do These newer versions actually work for us?
    -- QuickCheck   2.8...2.14.2
    -- reflection   2.1.2...2.1.6
    -- smallcheck   1.2.1
    -- tagged       0.8.4...0.8.6.1
    Build-Depends:     tagged         >= 0.2.3   && < 0.8.7
                     , reflection     >= 1.1.6   && < 2.2
                     , prelude-safeenum < 0.2
                     -- N.B., major smallcheck API break between 0.5 and 0.6
                     , smallcheck     >= 0.4     && < 1.3
                     , lazysmallcheck >= 0.5     && < 0.7
                     , QuickCheck     >= 2.4.1.1 && < 2.15

    -- I think this is all that needs doing to get rid of the warnings?
    if flag(base4)
        Build-Depends: base >= 4 && < 5
    else
        Build-Depends: base < 4

----------------------------------------------------------------
----------------------------------------------------------- fin.
