Cabal-Version:  2.2
-- Cabal >=2.2 is required for:
--    <https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas>
-- Since 2.1, the Cabal-Version must be the absolutely first thing
-- in the file, even before comments.  Also, no longer uses ">=".
--    <https://github.com/haskell/cabal/issues/4899>

----------------------------------------------------------------
-- wren gayle romano <wren@cpan.org>                ~ 2024-08-29
----------------------------------------------------------------

Name:           data-fin
Version:        0.1.99999999
Build-Type:     Simple
Stability:      experimental
Homepage:       https://wrengr.org/software/hackage.html
Bug-Reports:    https://github.com/wrengr/data-fin/issues
Author:         wren gayle romano
Maintainer:     wren@cpan.org
Copyright:      2012–2024 wren romano
-- Cabal-2.2 requires us to say "BSD-3-Clause" not "BSD3"
License:        BSD-3-Clause
License-File:   LICENSE

Category:       Data
Synopsis:
    Finite totally ordered sets
Description:
    Finite totally ordered sets

Extra-source-files:
    AUTHORS, README, CHANGELOG

-- <https://github.com/wrengr/data-fin/actions?query=workflow%3Aci>
Tested-With:
    GHC ==8.0.2,
    GHC ==8.2.2,
    GHC ==8.4.4,
    GHC ==8.6.5,
    GHC ==8.8.4,
    GHC ==8.10.3,
    GHC ==9.0.1,
    GHC ==9.2.4,
    GHC ==9.4.8,
    GHC ==9.6.5,
    GHC ==9.8.2,
    GHC ==9.10.1

Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/data-fin.git

----------------------------------------------------------------
Library
    Default-Language:  Haskell2010
    Hs-Source-Dirs:    src
    Exposed-Modules:   Data.Number.Fin
                     , Data.Number.Fin.Integer
                     , Data.Number.Fin.Int8
                     , Data.Number.Fin.Int16
                     , Data.Number.Fin.Int32
                     , Data.Number.Fin.Int64
                     -- Data.Number.Fin.Word8
                     -- Data.Number.Fin.Word16
                     -- Data.Number.Fin.Word32
                     -- Data.Number.Fin.Word64
                     -- Data.Number.Fin.TyInteger
                     -- Data.Number.Fin.TyBinary
                     , Data.Number.Fin.TyDecimal
                     -- TODO: OfType should be moved elsewhere if we don't use it...
                     -- Data.Reflection.OfType
    Other-Modules:     Data.Number.Fin.TyOrdering

    -- TODO: do These newer versions actually work for us?
    -- QuickCheck   2.8...2.14.2
    -- reflection   2.1.2...2.1.6
    -- smallcheck   1.2.1
    -- tagged       0.8.4...0.8.6.1
    Build-Depends:     tagged         >= 0.2.3   && < 0.8.7
                     , reflection     >= 1.1.6   && < 2.2
                     , prelude-safeenum < 0.2
                     -- N.B., major smallcheck API break between 0.5 and 0.6
                     , smallcheck     >= 0.4     && < 1.3
                     , lazysmallcheck >= 0.5     && < 0.7
                     , QuickCheck     >= 2.4.1.1 && < 2.15
                     , base           >= 4.9     && < 5

----------------------------------------------------------------
----------------------------------------------------------- fin.
